[package]
name = "blazy-t"
version = "0.1.0"
authors = ["Jakub Duchniewicz <j.duchniewicz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
embedded-hal = "0.2.4"
nrf52832-hal = "0.12.1"
rtt-target = {version = "0.3.0", features=["cortex-m"] }

[profile.release]
panic = "abort"
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

